# mid360_avoidance

./: CMakeLists.txt  package.xml
launch/: avoidance_full.launch  livox_plane_filter.launch  sector_avoidance.launch
src/: README.md  livox_plane_filter.cpp  sector_avoidance.cpp
