<?xml version="1.0"?>
<package format="2">
  <name>mid360_avoidance</name>
  <version>0.1.0</version>
  <description>no description</description>

  <maintainer email="markpenza@gmail.com">mapk58</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <export/>
</package>

